# locationapp-server

./: Cargo.toml  LICENSE  TODO.md  build.rs  config.example.json  config.schema.json  cross.sh  gen_api_key.sh  gen_web_user.sh  package.sh  run.sh
db/: migrate-1.sql  up.sql
src/: auth.rs  cli.rs  config.rs  db.rs  location.rs  logserv.rs  main.rs  misc.rs
