[package]
name = "locationapp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
rusqlite = "0.29.0"
r2d2 = "0.8.10"
dashmap = "5.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "4.4.1"
parking_lot = "0.12.1"
reqwest = "0.11.18"
rand = "0.8.5"
r2d2_sqlite = "0.22.0"
env_logger = "0.10.0"
log = "0.4.19"